--- a/BluetoothAlertSample/Base.lproj/Main.storyboard
+++ b/BluetoothAlertSample/Base.lproj/Main.storyboard
@@ -66,8 +66,8 @@
                                             <rect key="frame" x="0.0" y="0.0" width="344.5" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="iOS15サンプル" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AdA-K7-qEW">
-                                                    <rect key="frame" x="20" y="11.5" width="114" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="待機なしサンプル" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AdA-K7-qEW">
+                                                    <rect key="frame" x="20" y="11.5" width="139" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -89,8 +89,8 @@
                                             <rect key="frame" x="0.0" y="0.0" width="344.5" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="iOS12サンプル" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NrO-vo-ZTy">
-                                                    <rect key="frame" x="20" y="11.5" width="113.5" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="待機ありサンプル" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NrO-vo-ZTy">
+                                                    <rect key="frame" x="20" y="11.5" width="139" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -163,10 +163,10 @@
             </objects>
             <point key="canvasLocation" x="-162" y="-598"/>
         </scene>
-        <!--SampleiOS15 View Controller-->
+        <!--Any Timing Sample View Controller-->
         <scene sceneID="18g-od-WCf">
             <objects>
-                <viewController id="g9q-7K-2qu" customClass="SampleiOS15ViewController" customModule="BluetoothAlertSample" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="g9q-7K-2qu" customClass="AnyTimingSampleViewController" customModule="BluetoothAlertSample" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="sVu-h5-WDf">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -207,10 +207,10 @@
             </objects>
             <point key="canvasLocation" x="-162" y="98"/>
         </scene>
-        <!--SampleiOS12 View Controller-->
+        <!--Final Sample View Controller-->
         <scene sceneID="JIJ-ve-2aT">
             <objects>
-                <viewController id="d4F-jC-72U" customClass="SampleiOS12ViewController" customModule="BluetoothAlertSample" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="d4F-jC-72U" customClass="FinalSampleViewController" customModule="BluetoothAlertSample" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Qcu-xt-CBq">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
